--- a/ContinuousDeploymentCode/Views/Home/Index.cshtml
+++ b/ContinuousDeploymentCode/Views/Home/Index.cshtml
@@ -4,5 +4,5 @@
 
 <div class="text-center">
     <h1 class="display-4">this is the demo of Continuous Deployment on Azure using git repo.</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+   <h2>this is added after hosting website</h2>
 </div>
