latest changes for continuos deployment.

--- a/ContinuousDeploymentCode/Views/Home/Index.cshtml
+++ b/ContinuousDeploymentCode/Views/Home/Index.cshtml
@@ -5,4 +5,7 @@
 <div class="text-center">
     <h1 class="display-4">this is the demo of Continuous Deployment on Azure using git repo.</h1>
    <h2>this is added after hosting website</h2>
+
+
+   <h3>This is the best example of continuos deployment of website to azure...!</h3>
 </div>
