Added Employee Table in index.html file.

--- a/ContinuousDeploymentCode/Views/Home/Index.cshtml
+++ b/ContinuousDeploymentCode/Views/Home/Index.cshtml
@@ -8,4 +8,53 @@
 
 
    <h3>This is the best example of continuos deployment of website to azure...!</h3>
+
+   <table>
+       <thead>
+           <tr>
+               <th>Employee Id</th>
+               <th>Employee Name</th>
+               <th>Employee Designation</th>
+               <th>Company Name</th>
+               <th>Salary</th>
+           </tr>
+       </thead>
+       <tbody>
+           <tr>
+               <td>1</td>
+               <td>Gaurav</td>
+               <td>Software Engineer</td>
+               <td>Simform</td>
+               <td>41667</td>
+           </tr>
+           <tr>
+               <td>2</td>
+               <td>Anand</td>
+               <td>Software Engineer</td>
+               <td>HSBC</td>
+               <td>75000</td>
+           </tr>
+           <tr>
+               <td>3</td>
+               <td>Parth</td>
+               <td>Software Engineer</td>
+               <td>TCS</td>
+               <td>60000</td>
+           </tr> 
+           <tr>
+               <td>4</td>
+               <td>Shivang</td>
+               <td>Software Engineer</td>
+               <td>Simform</td>
+               <td>41667</td>
+           </tr> 
+           <tr>
+               <td>5</td>
+               <td>Umang</td>
+               <td>Software Engineer</td>
+               <td>Eronkan</td>
+               <td>35000</td>
+           </tr>
+       </tbody>
+   </table>
 </div>
