--- a/ContinuousDeploymentCode/Views/Home/Index.cshtml
+++ b/ContinuousDeploymentCode/Views/Home/Index.cshtml
@@ -3,57 +3,53 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">this is the demo of Continuous Deployment on Azure using git repo.</h1>
-   <h2>this is added after hosting website</h2>
+   <h1>Employee Table</h1>
 
-
-   <h3>This is the best example of continuos deployment of website to azure...!</h3>
-
-   <table>
+   <table style="width:100%; border:1px solid black">
        <thead>
            <tr>
-               <th>Employee Id</th>
-               <th>Employee Name</th>
-               <th>Employee Designation</th>
-               <th>Company Name</th>
-               <th>Salary</th>
+               <th  style="border:1px solid black">Employee Id</th>
+               <th  style="border:1px solid black">Employee Name</th>
+               <th  style="border:1px solid black">Employee Designation</th>
+               <th  style="border:1px solid black">Company Name</th>
+               <th  style="border:1px solid black">Salary</th>
            </tr>
        </thead>
        <tbody>
            <tr>
-               <td>1</td>
-               <td>Gaurav</td>
-               <td>Software Engineer</td>
-               <td>Simform</td>
-               <td>41667</td>
+               <td style="border:1px solid black">1</td>
+               <td style="border:1px solid black">Gaurav</td>
+               <td style="border:1px solid black">Software Engineer</td>
+               <td style="border:1px solid black">Simform</td>
+               <td style="border:1px solid black">41667</td>
            </tr>
            <tr>
-               <td>2</td>
-               <td>Anand</td>
-               <td>Software Engineer</td>
-               <td>HSBC</td>
-               <td>75000</td>
+               <td style="border:1px solid black">2</td>
+               <td style="border:1px solid black">Anand</td>
+               <td style="border:1px solid black">Software Engineer</td>
+               <td style="border:1px solid black">HSBC</td>
+               <td style="border:1px solid black">75000</td>
            </tr>
            <tr>
-               <td>3</td>
-               <td>Parth</td>
-               <td>Software Engineer</td>
-               <td>TCS</td>
-               <td>60000</td>
+               <td style="border:1px solid black">3</td>
+               <td style="border:1px solid black">Parth</td>
+               <td style="border:1px solid black">Software Engineer</td>
+               <td style="border:1px solid black">TCS</td>
+               <td style="border:1px solid black">60000</td>
            </tr> 
            <tr>
-               <td>4</td>
-               <td>Shivang</td>
-               <td>Software Engineer</td>
-               <td>Simform</td>
-               <td>41667</td>
+               <td style="border:1px solid black">4</td>
+               <td style="border:1px solid black">Shivang</td>
+               <td style="border:1px solid black">Software Engineer</td>
+               <td style="border:1px solid black">Simform</td>
+               <td style="border:1px solid black">41667</td>
            </tr> 
            <tr>
-               <td>5</td>
-               <td>Umang</td>
-               <td>Software Engineer</td>
-               <td>Eronkan</td>
-               <td>35000</td>
+               <td style="border:1px solid black">5</td>
+               <td style="border:1px solid black">Umang</td>
+               <td style="border:1px solid black">Software Engineer</td>
+               <td style="border:1px solid black">Eronkan</td>
+               <td style="border:1px solid black">35000</td>
            </tr>
        </tbody>
    </table>
