-added feature controller in code.

--- a/ContinuousDeploymentCode/Views/Shared/_Layout.cshtml
+++ b/ContinuousDeploymentCode/Views/Shared/_Layout.cshtml
@@ -25,6 +25,11 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+                        <feature name="Beta">
+                            <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Feature" asp-action="Index">Privacy</a>
+                        </li>
+                        </feature>
                     </ul>
                 </div>
             </div>
