--- a/ContinuousDeploymentCode/Views/_ViewImports.cshtml
+++ b/ContinuousDeploymentCode/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using ContinuousDeploymentCode
 @using ContinuousDeploymentCode.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, Microsoft.FeatureManagement.AspNetCore
