--- a/ContinuousDeploymentCode/Views/Shared/_Layout.cshtml
+++ b/ContinuousDeploymentCode/Views/Shared/_Layout.cshtml
@@ -27,7 +27,17 @@
                         </li>
                         <feature name="Beta">
                             <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Feature" asp-action="Index">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Feature" asp-action="Index">Beta</a>
+                        </li>
+                        </feature>
+                        <feature name="staging">
+                            <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Feature" asp-action="Staging">Staging</a>
+                        </li>
+                        </feature>
+                        <feature name="production">
+                            <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Feature" asp-action="Production">Production</a>
                         </li>
                         </feature>
                     </ul>
