--- a/ContinuousDeploymentCode/Views/Feature/Production.cshtml
+++ b/ContinuousDeploymentCode/Views/Feature/Production.cshtml
@@ -4,3 +4,18 @@
 @{
 }
 <h1>this is production  website demo</h1>
+  <script src="/lib/jquery/dist/jquery.min.js"></script>
+<script>
+    $(document).ready(function(){
+        $.ajax({
+            url:"https://apihostdemo.azurewebsites.net/api/course/allcourse",
+            type:"Get",
+            success: function(result){
+                console.log(result);
+            },
+            error:function(){
+                console.log(result);
+            }
+        })
+    })
+</script>
