--- a/ContinuousDeploymentCode/Views/Feature/Production.cshtml
+++ b/ContinuousDeploymentCode/Views/Feature/Production.cshtml
@@ -26,7 +26,7 @@
                var items ='';
                $.each(result, function (i, item) {  
                             var rows = "<tr>"  
-                             + "<td style='border:1px solid black' class='yourTableTh'>" + i + "</td>"  
+                             + "<td style='border:1px solid black' class='yourTableTh'>" + (i+1) + "</td>"  
                             + "<td style='border:1px solid black' class='yourTableTh'>" + item.id + "</td>"  
                             + "<td style='border:1px solid black' class='yourTableTh'>" + item.name + "</td>" 
                             + "</tr>";  
